--- a/tablemario.html
+++ b/tablemario.html
@@ -32,7 +32,9 @@
     <tr>
         <th>No</th>
         <th>Nama</th>
+        <th>Universitas</th>
         <th>Kelompok</th>
+        <th>Foto</th>
     </tr>
     <tr>
         <td>1</td>
