--- a/latihanmario.html
+++ b/latihanmario.html
@@ -20,7 +20,7 @@
         <h2>Riwayat Pendidikan</h2>
         <ul>
             <li>SD Katolik Rosa Mystica Kupang  2007 - 2013</li>
-            <li>SMP Seminari St. Yoh Berkhmans  2013 - 2015</li>
+            <li>SMPK Seminari St. Yoh Berkhmans  2013 - 2015</li>
             <li>SMP Katolik Giovanni Kupang     2015 - 2016</li>
             <li>SMA Negeri 3 Kupang             2016 - 2019</li>
             <li>UPN Veteran Jawa Timur          2019 - Sekarang</li>
