add link portofolio to biodata

--- a/latihanmario.html
+++ b/latihanmario.html
@@ -28,5 +28,6 @@
         <h2>Contact Person</h2>
         <p><a href="https://www.linkedin.com/in/mario-leke-b591a4245/">Visit My Linkedin</a></p>
         <p><a href="https://www.instagram.com/marioleke/">Visit My Instagram</a></p>
+        <p><a href="portofolio.html">Visit My Website</a></p>
     </body>
 </html>
