pengaplikasian css ke portofolio dan biodata

--- a/web dev basic/portofolio.html
+++ b/web dev basic/portofolio.html
@@ -5,21 +5,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>We Are Tayo</title>
+
+    <style>
+        img {
+            background-image: -moz-linear-gradient(20%);
+        }
+        table, th, td {
+            border: 3px solid darkolivegreen;
+            text-align: center;
+            color: slategray;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        .h1 {
+            color: greenyellow;
+            background-color: darkolivegreen; 
+            text-align: center;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            
+        }
+        .h2 {
+            color: greenyellow;
+            background-color: darkolivegreen;
+            text-align: center;  
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        .h4 {
+            text-align: center;
+            color: greenyellow;
+            background-color: darkolivegreen;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        .paragraph {
+            color: slategray;
+            text-align: justify; 
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        ul {
+            color: slategray;
+            background-color: beige;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        form {
+            color: slategray;
+            background-color: beige;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;  
+        }
+        input {
+            color: slategray;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        a {
+          color: slategrey; 
+          background-color: beige;
+          font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+    
+    </style>
 </head>
 <body>
-    <h1>Tayo Team !</h1>
-    <img src="1.jpg" width="350">  <img src="2.jpg" width="350">  <img src="3.jpg" width="350">
-    <h2>Our Short Story</h2>
-    <p> Halo guys, kenalin kami adalah team Tayo ! Awal mula kami bisa menjadi satu team karena kebetulan kami duduk barengan satu meja pada saat
+    <h1 class="h1">Tayo Team !</h1>
+    <img src="1.jpg" width="450">  <img src="3.jpg" width="450" align="right">
+    <img src="2.jpg" width="450" style="display:block; margin:auto">   
+    <h2 class="h2">Our Short Story</h2>
+    <p class="paragraph">Halo guys, kenalin kami adalah team Tayo ! Awal mula kami bisa menjadi satu team karena kebetulan kami duduk barengan satu meja pada saat
         kegiatan Workshop offline Design Thinking di Universitas Dinamika. Anggota kelompok kami berasal dari berbagai daerah dan dari dua universitas yang ada di Surabaya.
         Kalian bisa lihat ada tiga foto diatas, nah itu foto diambil saat team kami melakukan diskusi dan menyelesaikan case study untuk melakukan survei terhadap penumpang Suroboyo Bus.
         Foto pertama di atas itu diambil saat kami sudah switch bus di terminal bungurasih untuk rute ke utara Surabaya, foto kedua diambil pada saat kami melakukan diskusi kemlompok di kedai kopi Jokopi Dinoyo dan foto ketiga diambil saat kami melakukan diskusi terakhir untuk persiapan demo day di Kedai kopi Eustachio di dekat UPN Veteran Jatim.
         Walaupun baru beberapa hari berinteraksi namun kami sudah sangat dekat antara satu dengan yang lain. Banyak kekonyolan dan kelucuan yang terjadi saat menyelesaikan study case. Tahu gak? setelah selesai demo day kemarin kami meet up lagi, kami berencana untuk jalan-jalan dan berkeliling di kota Surabaya bersama-sama. Kami pergi ke jalan Tunjungan yang lagi viral banget sekarang di Surabaya, disana kami mengambil beberapa foto sebagai 
         kenang-kenangan, setelah dari Jalan tunjungan kami mampir ke tempat makan baru di Surabaya yaitu Wizzmie. Setelah selesai makan kami saling berpamitan karena ada beberapa anggota kelompok yang harus kembali ke rumah mereka di luar kota surabaya.
-        Sekian dulu cerita dari kelompok kami. Aizar Maniaaaaaaa Mantap !!!!
-    </p>
-    <h2>Our Profile</h2>
-    <table border="6">
+        Sekian dulu cerita dari kelompok kami. Aizar Maniaaaaaaa Mantap !!!!</p> 
+    <h2 class="h2">Our Profile</h2>
+    <table>
         <tr>
             <th>No</th>
             <th>Nama</th>
@@ -35,7 +91,7 @@
             <td>Teknik Industri</td>
             <td>UPN Veteran Jawa Timur</td>
             <td>BWI-SBY2</td>
-            <td><p><a href="https://instagram.com/marioleke?igshid=YmMyMTA2M2Y=">marioleke</a></p></td>
+            <td><a href="https://instagram.com/marioleke?igshid=YmMyMTA2M2Y=">marioleke</a></td>
             <td><img src="marioooo.jpg" width="100"></td>
         </tr>
         <tr>
@@ -44,7 +100,7 @@
             <td>Teknik Industri</td>
             <td>UPN Veteran Jawa Timur</td>
             <td>BWI-SBY2</td>
-            <td><p><a href="https://instagram.com/taufiqmutaf?igshid=NmNmNjAwNzg=">taufiqmutaf</a></p></td>
+            <td><a href="https://instagram.com/taufiqmutaf?igshid=NmNmNjAwNzg=">taufiqmutaf</a></td>
             <td><img src="taufiq.jpg" width="100"></td>
         </tr>
         <tr>
@@ -53,7 +109,7 @@
             <td>Teknik Industri</td>
             <td>UPN Veteran Jawa Timur</td>
             <td>BWI-SBY 1</td>
-            <td><p><a href="https://instagram.com/robin.aizar?igshid=NmNmNjAwNzg=">robin.aizar</a></p></td>
+            <td><a href="https://instagram.com/robin.aizar?igshid=NmNmNjAwNzg=">robin.aizar</a></td>
             <td><img src="aizar.jpg" width="100"></td>
         </tr>
         <tr>
@@ -62,7 +118,7 @@
             <td>Teknik Industri</td>
             <td>UPN Veteran Jawa Timur</td>
             <td>Surabaya</td>
-            <td><p><a href="https://instagram.com/nuarita_kartika?igshid=NmNmNjAwNzg=">nuarita_kartika</a></p></td>
+            <td><a href="https://instagram.com/nuarita_kartika?igshid=NmNmNjAwNzg=">nuarita_kartika</a></td>
             <td><img src="nuarita.jpg" width="100"></td>
         </tr> 
         <tr>
@@ -71,7 +127,7 @@
             <td>Teknik Industri</td>
             <td>UPN Veteran Jawa Timur</td>
             <td>Surabaya</td>
-            <td><p><a href="https://instagram.com/febiaelsaa?igshid=NmNmNjAwNzg=">febiaelsaa</a></p></td>
+            <td><a href="https://instagram.com/febiaelsaa?igshid=NmNmNjAwNzg=">febiaelsaa</a></td>
             <td><img src="elsa.jpg" width="100"></td>
         </tr>
         <tr>
@@ -80,7 +136,7 @@
             <td>Administrasi Publik</td>
             <td>Universitas Negeri Surabaya</td>
             <td>Surabaya</td>
-            <td><p><a href="https://instagram.com/detaaarii?igshid=NmNmNjAwNzg=">detaaarii</a></p></td>
+            <td><a href="https://instagram.com/detaaarii?igshid=NmNmNjAwNzg=">detaaarii</a></td>
             <td><img src="deta.jpg" width="100"></td>
         </tr>
         <tr>
@@ -89,7 +145,7 @@
             <td>Administrasi Publik</td>
             <td>Universitas Negeri Surabaya</td>
             <td>Surabaya</td>
-            <td><p><a href="https://instagram.com/uminurhb?igshid=NmNmNjAwNzg=">uminurhb</a></p></td>
+            <td><a href="https://instagram.com/uminurhb?igshid=NmNmNjAwNzg=">uminurhb</a></td>
             <td><img src="umi.jpg" width="100"></td>
         </tr>
         <tr>
@@ -98,11 +154,11 @@
             <td>Administrasi Publik</td>
             <td>Universitas Negeri Surabaya</td>
             <td>Surabaya</td>
-            <td><p><a href="https://instagram.com/selvianipfasari?igshid=NmNmNjAwNzg=">selvianipfasari</a></p></td>
+            <td><a href="https://instagram.com/selvianipfasari?igshid=NmNmNjAwNzg=">selvianipfasari</a></td>
             <td><img src="selvia.jpg" width="100"></td>
         </tr> 
     </table>
-    <h2>Our Activity</h2>
+    <h2 class="h2">Our Activity</h2>
     <ul>
         <li>Day 1 : Workshop Offline "Design Thinking"</li>
         <li>Day 2 : Case Study Survey</li>
@@ -111,10 +167,10 @@
         <li>Day 5 : Demo Day (Presentasi Case Study)</li>
         <li>Day 6 : Strolling Arround in Surabaya City</li>
     </ul>
-    <h2>Our Project</h2>
-    <p><a href="https://miro.com/welcomeonboard/Y0JsSmVjU0RvaXp3cFJBNVJSNnFpaE1OUnIzbmtSSnhNNjNiaDF0NGZWN2NzQTVQUGNEd01VZWtKd0oxN0o1VnwzNDU4NzY0NTM0MjI3Nzg0NjY4fDI=?share_link_id=573795231273">Visit Our Miro</a></p>
-    <h4>Kritik dan Saran</h4> 
-    <p>Terimakasih sudah mengunjungi website kami, kritik dan saran dari kalian sangat berguna bagi kami.</p>
+    <h2 class="h2">Our Project</h2>
+    <p><a href="https://miro.com/welcomeonboard/Y0JsSmVjU0RvaXp3cFJBNVJSNnFpaE1OUnIzbmtSSnhNNjNiaDF0NGZWN2NzQTVQUGNEd01VZWtKd0oxN0o1VnwzNDU4NzY0NTM0MjI3Nzg0NjY4fDI=?share_link_id=573795231273">Design Thinking Suroboyo Bus Wisata</a></p>
+    <h4 class="h4">Kritik dan Saran</h4> 
+    <p class="paragraph">Terimakasih sudah mengunjungi website kami, kritik dan saran dari kalian sangat berguna bagi kami.</p>
     <form>
         <p> Name :</p>
         <input type="text" name="Name" placeholder="enter your name here">
