tambah file portofilio.css dan biodata.css

--- a/web dev basic/latihanmario.html
+++ b/web dev basic/latihanmario.html
@@ -23,7 +23,7 @@
             background-color: beige;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
-        a {
+        .a {
           color: slategrey; 
           background-color: beige;
           font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -58,12 +58,12 @@
             <li>UPN Veteran Jawa Timur          2019 - Sekarang</li>
         </ul>
         <h2 class="h2">Contact Person</h2>
-        <a href="https://www.linkedin.com/in/mario-leke-b591a4245/">Linkedin</a>
+        <a class="a" href="https://www.linkedin.com/in/mario-leke-b591a4245/">Linkedin</a>
         <br>
         <br>
-        <a href="https://www.instagram.com/marioleke/">Instagram</a>
+        <a class="a" href="https://www.instagram.com/marioleke/">Instagram</a>
         <br>
         <br>
-        <a href="portofolio.html">Portofolio</a>
+        <a class="a" href="portofolio.html">Portofolio</a>
     </body>
 </html>
